<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="font_roboto_regular">fonts/Roboto-Regular.ttf</string>
    <string name="font_roboto_medium">fonts/Roboto-Medium.ttf</string>
    <string name="font_roboto_bold">fonts/Roboto-Bold.ttf</string>
    <string name="header">Title</string>
    <string name="note">Note</string>
    <string name="main_fragment">Note</string>
    <string name="toListViewFragment">Global Notes</string>
    <string name="welcome">Welcome to Minder</string>
    <string name="tags">#vsco #vscocam #kyiv #awesome #icebucketchallange</string>
    <string name="last_modifed">Last Modifed</string>
    <string name="note_message">Medium Text</string>
    <string name="opened">Navigation drawer opened</string>
    <string name="closed">Navigation drawer closed</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="tags_str">Tags</string>

</resources>
