<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_mind_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/MaterialIndigo500"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1"
        android:layout_weight="0.10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/circle" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal"
                android:id="@+id/editTitleView">
                <EditText
                    android:id="@+id/editTitleText"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:layout_weight="0.9"
                    android:background="@null"
                    android:textColor="@color/MaterialWhite"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/setEditedTitle"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_check_white_24dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/text_view_mind"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:text="Title"
                android:textColor="@color/MaterialWhite"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:textStyle="bold"
                android:maxLines="3"
                android:maxHeight="100dp"
                android:maxLength="144" />
        </LinearLayout>

        <TextView
            android:id="@+id/tagsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/MaterialWhite" />

        <TextView
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:phoneNumber="false"
            android:text="UA, Kyiv"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/MaterialWhite"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/createdDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="12 September 2015 16:05 AM"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/MaterialWhite"
            android:textSize="11sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveBodyImageView"
            android:visibility="gone"
            android:src="@drawable/ic_save_white_24dp"
            android:layout_gravity="right" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:orientation="vertical">
        <TextView
            android:id="@+id/note_message"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.45"
            android:padding="10dp"
            android:text="@string/note_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.45"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp"
            android:visibility="gone"
            android:id="@+id/bodyEditHidden" />
    </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/last_modifed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/last_modifed"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</LinearLayout>